syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.hello";
option java_outer_classname = "HelloProto";

package hello;

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string greeting = 1;
    ResultCode code = 2;
}

enum ResultCode {
    UNKNOWN = 0;
    SUCCESS = 1;
    FAIL = 2;
}

service HelloService {
    rpc Hello (HelloRequest) returns (HelloResponse);
}
